@@ -19,6 +19,7 @@ Engine fixes:
 * Fixed a bug where the game window could be resized below the minimum size after exiting fullscreen mode.
 * Removed the default resolution scaling when virtual_heights is undefined.
 * Improved performance when checking map event hotspots.
+* Fix Windows-style paths with backslashes not working on non-Windows systems.
 
 Game updates:
 
